--- a/survey.html
+++ b/survey.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Connor Kobriger">
-    <meta name="description" content="This website was create as a part of the Unit 3 Test.">
+    <meta name="author" content="Danny Chavez">
+    <meta name="description" content="This website was created for the Unit 3 Test.">
 
-    <meta name="og:title" content="Unit 3 Test">
-    <meta name="og:description" content="This website was create as a part of the Unit 3 Test.">
-    <meta name="og:image"
-        content="https://us.123rf.com/450wm/dolgachov/dolgachov1510/dolgachov151001463/46993334-education-children-and-school-concept-little-student-girl-taking-test.jpg?ver=6">
+    <meta name="og:title" content="Test part 2">
+    <meta name="og:description" content="This website was created for the Unit 3 Test.">
+    <meta name="og:image" content="images/checkbox.png">
 
     <title>Coding Part 2</title>
     <link rel="stylesheet" href="style.css">
