--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta name=”author” content="Jadyn Calhoun">
+    <meta name=”author” content="Danny Chavez">
     <meta name="description" content="Take our short quiz and our short survey!">
 
     <link rel="stylesheet" href="style.css">
@@ -17,9 +17,7 @@
 </head>
 
 <body>
-    <div style="background-image: url(media/lightBackground.png)">
-    <fieldset>
-        <legend>Links to other pages</legend>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home Page</a></li>
@@ -27,30 +25,6 @@
                     <li><a href="survey.html">Survey</a></li>
                 </ul>
             </nav>
-    </fieldset>
-    <h1>THANK YOU!</h1>
-    <p>We appreciate you visiting our site.<em> Without users like you we could not continue.</em></p>
-    <p><strong>PLEASE</strong> take a minute to fill out this survey and tell us what we can do better</p>
-    <form action=# method=#>
-        <fieldset>
-            <legend>User Information</legend>
-            <ul>
-                <li><label for="name">Name:</label>
-                <input type="text" id="name" name="user.name"></li>
 
-                <li><label for="email">Email:</label>
-                <input type="text" id="email" name="user.email"></li>
-                
-                <li><label for="number">Phone Number:</label>
-                <input type="text" id="number" name="user.number"></li>
-
-                <li><label for="improvements">Please tell us anything we can improve on:</label></li>
-                <li><textarea id="improvements" name="user.improvements" cols="30" rows="10"></textarea></li>
-                
-                <button type="submit">Submit</button>
-            </ul>
-        </fieldset>
-    </form>
-</div>
 </body>
 </html>
