--- a/survey.html
+++ b/survey.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Danny Chavez">
@@ -10,9 +9,12 @@
     <meta name="og:description" content="This website was created for the Unit 3 Test.">
     <meta name="og:image" content="images/checkbox.png">
 
-    <title>Coding Part 2</title>
+
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
+        <title>Survey</title>
+
 </head>
 
 <body style="background-image: url(lightBackground.png)">
@@ -36,31 +38,45 @@
 
     <form action="#" method="POST">
         <section>
-            <fieldset>
-                <legend>Survey</legend>
-                <ul>
-                    <li>
-                        <label for="title1">Name</label>
-                        <input type="text" id="user.name" name="user.name">
-                    </li>
-                    <li>
-                        <label for="title2">Email</label>
-                        <input type="text" id="user.email" name="user.email">
-                    </li>
-                    <li>
-                        <label for="title3">Phone Number</label>
-                        <input type="text" id="user.phoneNumber" name="user.phoneNumber">
-                    </li>
-                    <li>
-                        <label for="title4">Please tell us anything that we can improve on</label>
-                    </li>
-                    <li>
-                        <textarea rows="10" cols="40"></textarea>
-                    </li>
-                    <input type="submit">
+        <fieldset>
+            <legend>Survey</legend>
+            <ul>
+                <li>
+                    <label for="title 1">
+                        Name
+                    <input type="text" id="user.name" name="name">
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 2">
+                        Email
+                    <input type="text" id="user.email" name="email">
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 3">
+                        Phone Number
+                    <input type="text" id="user.phoneNum" name="phoneNum">
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 4">
+                        Please tell us anything that we can improve on
+                    </label>
+                </li>
+
+                <textarea rows="10" cols="40"></textarea><br>
+
+                <label for="Submit">
+                    <button type="submit" name="submit" value="Submit" >Submit</button>
+                </label>
+
                 </ul>
-            </fieldset>
+        </fieldset>
         </section>
     </form>
-    
+
 </body>
