Almost Done with everything

--- a/quiz.html
+++ b/quiz.html
@@ -16,15 +16,152 @@
     <title>Quiz</title>
 </head>
 
-<body>
+<body style="background-image: url(lightBackground.png);">  
+    <form action="#" method="POST"></form>
+    <section>
+        <fieldset>
+            <legend>Links to other pages</legend>
+            <ul>
+                <li><a href="index.html">Home Page</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="survey.html">Survey</a></li>
+            </ul>
+        </fieldset>
+    </section>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home Page</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="survey.html">Survey</a></li>
-                </ul>
-            </nav>
+    
+    <form action="#" method="POST">
+        <section>
+        <fieldset>
+            <legend>Multiple Choice</legend>
+            <ul>
+                <p>What is the <em>scientific</em> name of H<sub>2</sub>O ?</p>
+                <li>
+                    <label for="title 1">
+                    <input type="radio" id="multi.H2O.air" name="air">
+                    Air
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 2">
+                    <input type="radio" id="multi.H2O.fire" name="fire">
+                    Fire
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 3">
+                    <input type="radio" id="multi.H2O.earth" name="earth">
+                    Earth
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 4">
+                    <input type="radio" id="multi.H2O.water" name="water">
+                    Water
+                    </label>
+                </li>
+
+
+                <p>What is the <em>most popular</em> name for Dec. 25<sup>th</sup></p>
+                <li>
+                    <label for="title 5">
+                    <input type="radio" id="multi.DEC.chistmas" name="christmas">
+                    Christmas
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 6">
+                    <input type="radio" id="multi.DEC.thanksgiving" name="thanksgiving">
+                    Thanksgiving
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 7">
+                    <input type="radio" id="multi.DEC.valentinesday" name="valentinesday">
+                    Valentine's Day
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 8">
+                    <input type="radio" id="multi.DEC.halloween" name="halloween">
+                    Halloween
+                    </label>
+                </li>
+
+
+                <p>Which of the following the the chemical code for <b>sugar</b>?</p>
+                <li>
+                    <label for="title 9">
+                    <input type="checkbox" id="multi.chem.122211" name="C12 H22 O11">
+                    C<sub>12</sub> H<sub>22</sub> O<sub>11</sub>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 10">
+                    <input type="checkbox" id="multi.chem.5105" name="C5 H10 O5">
+                    C<sub>5</sub> H<sub>10</sub> O<sub>5</sub>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 11">
+                    <input type="checkbox" id="multi.chem.6126" name="C6H12O6">
+                    C<sub>6</sub> H<sub>12</sub> O<sub>6</sub>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 12">
+                    <input type="checkbox" id="multi.chem.112211" name="C11H22O11">
+                    C<sub>11</sub> H<sub>22</sub> O<sub>11</sub>
+                    </label>
+                </li>
+
+
+                <p>Which of the following are <b>even</b>?</p>
+                <li>
+                    <label for="title 13">
+                    <input type="checkbox" id="multi.even.1" name="1st">
+                    1<sup>st</sup>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 14">
+                    <input type="checkbox" id="multi.even.2" name="2nd">
+                    2<sup>nd</sup>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 15">
+                    <input type="checkbox" id="multi.even.3" name="3rd">
+                    3<sup>rd</sup>
+                    </label>
+                </li>
+
+                <li>
+                    <label for="title 16">
+                    <input type="checkbox" id="multi.even.4" name="4th">
+                    4<sup>th</sup>
+                    </label>
+                </li>
+
+                <label for="Submit">
+                    <button type="submit" name="submit" value="Submit" >Submit</button>
+                </label>
+
+            </ul>
+        </fieldset>
+        </section>
+    </form>
 
 </body>
 </html>
