Project is Complete!

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="author" content="Danny Chavez">
     <meta name="description" content="This website was created for the Unit 3 Test.">
 
-    <meta name="og:title" content="Test part 2">
+    <meta name="og:title" content="Coding Unit 3 Test pt2">
     <meta name="og:description" content="This website was created for the Unit 3 Test.">
     <meta name="og:image" content="images/checkbox.png">
 
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="checkbox.png" type="image/x-icon">
 
         <title>Home Page</title>
 
 </head>
 
-<body style="background-image: url(lightBackground.png);">
+<body style="background-image: url(lightBackground.png)">
 
     <section>
         <fieldset>
