--- a/quiz.html
+++ b/quiz.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <meta name=”author” content="Danny Chavez">
-    <meta name="description" content="Take our short quiz and our short survey!">
+    <meta name="description" content="This website was created for the Unit 3 test.">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="media/code.jpg" type="image/x-icon">
+    <meta name="og:title" content="Quiz">
+    <meta name="og:description" content="Take our short quiz please">
+    <meta name="og:image" content="image/quizpic.png">
 
-    <meta name="og: image" content="media/code.jpg">
-    <meta name="og: description" content="Take our short quiz and our short survey!">
-    <meta name="og: title" content="Quiz">
+    <link rel="shortcut icon" href="checkbox.png" type="image/x-icon">
 
     <title>Quiz</title>
 </head>
