--- a/survey.html
+++ b/survey.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Danny Chavez">
-    <meta name="description" content="This website was created for the Unit 3 Test.">
+    <meta name="description" content="This website was created for the Unit 3 test.">
 
     <meta name="og:title" content="Test part 2">
-    <meta name="og:description" content="This website was created for the Unit 3 Test.">
-    <meta name="og:image" content="images/checkbox.png">
+    <meta name="og:description" content="Please take a moment of your time to fill out our survey.">
+    <meta name="og:image" content="images/surveypic.png">
 
-
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="checkbox.png" type="image/x-icon">
 
         <title>Survey</title>
 
